# rrisc32

./: .gitignore  CMakeLists.txt  README.md  build.sh  requirements.txt  setup-python.sh.in  setup_python.sh  tmp.dif  tmp.diff  x.diff  x1.diff  x2.diff
include/: assembly.h  cli.h  elf.h  emulation.h  link.h  rrisc32.h  util.h
lib/: CMakeLists.txt  assembly.cpp  elf.cpp  emulation.cpp  link.cpp  linkage.cpp  rrisc32.cpp  util.cpp
libc/: CMakeLists.txt  gen_syscall.py
libc/include/: assert.h  rrisc32.h  setjmp.h  stdarg.h  stdio.h  stdlib.h  string.h  syscall.inc
libc/lib/: crt.s  malloc.c  printf.c  setjmp.c  stdio.c  string.c
libc/test/: CMakeLists.txt  lit.cfg  lit.sh.in
libc/test/basic/: _00_main.c  _01_stdarg.c  _02_printf.c  _03_sort.c  _04_jmp.c  _05_assert.c  _06_malloc.c  _07_linked_list.c  hello.c
rrisc32/: CMakeLists.txt
rrisc32/include/: elf.h  emulation.h  linkage.h  rrisc32.h  util.h
rrisc32/lib/: assembly.cpp  elf.cpp  emulation.cpp  linkage.cpp  rrisc32.cpp  util.cpp
rrisc32/test/: CMakeLists.txt
rrisc32/test/lit/: CMakeLists.txt
rrisc32/test/lit/assembly/: align.s  branch.s  expr.s  pseudo.s  rel.s  symbol.s
rrisc32/test/lit/compile/: assignment-2.c  assignment-3.c  assignment-4.c  binary.c  break.c  cast-1.c  cast-2.c  cast-3.c  comma.c  continue.c  do.c  for.c  function.c  global.c  goto.c  if.c  local-2.c  logical.c  pragma.c  static.c  string.c  switch.c  ternary.c  unary.c  while.c
rrisc32/test/lit/linkage/basic/: bar.s
rrisc32/test/unit/: CMakeLists.txt  test_assembly.cpp
rrisc32/tools/: CMakeLists.txt
rrisc32/tools/compile/: CMakeLists.txt  build.sh.in  codegen.py  design.md  main.py  requirements.txt  sema.py
rrisc32/tools/compile/example/: BinaryOp.c  Cast.c  Constant.c  PtrDecl.c  Struct.c  StructRef.c  statements.c
rrisc32/tools/dump/: CMakeLists.txt  main.cpp
rrisc32/tools/emulate/: main.cpp
rrisc32/tools/link/: main.cpp
test/: CMakeLists.txt
test/lib/: CMakeLists.txt  test_assembly.cpp  test_rrisc32.cpp
test/lit/: CMakeLists.txt  lit.cfg  lit.sh  lit.sh.in  requirements.txt
test/lit/assembly/: align.s  basic.s  branch.s  expr.s  pseudo.s  rel.s  symbol.s  test_directive.s
test/lit/compile/: Decl.c  Decl1.c  Decl1.c.s  FuncDef.c  assignment-1.c  assignment-3.c  assignment-4.c  cast-3.c  function.c  global.c  local-1.c  local-2.c  sizeof.c  static.c
test/lit/emulation/: hello.s
test/lit/linkage/: lit.local.cfg
test/lit/linkage/basic/: bar.s
test/lit/linkage/weak/: bar.s  foo.s  link.txt
test/tools/assemble/: hello.s
test/unit/: CMakeLists.txt
tools/: CMakeLists.txt
tools/assemble/: CMakeLists.txt  main.cpp
tools/compile/: CMakeLists.txt  array.c  build.sh.in  cc.py  codegen.py  design.md  design.txt  dump.py  main.py  sema.py  struct.c  tmp.py  types.c
tools/compile/example/: ArrayDecl.c  ArrayRef.c  Assignment.c  Constant.c  FuncCall.c  FuncDecl.c  Struct.c  Typedef.c  UnaryOp.c  assert.c
tools/compile/utils/: gen_lit_checks.py
tools/dump/: CMakeLists.txt  main.cpp
tools/emulate/: CMakeLists.txt  main.cpp
tools/link/: CMakeLists.txt  main.cpp
utils/: update_lit_checks.py
